# evmone

./: CMakeLists.txt
cmake/: ProjectEVMC.cmake
cmake/Hunter/: config.cmake  init.cmake
lib/evmone/: CMakeLists.txt  analysis.cpp  execution.cpp  execution.hpp  instructions.cpp  instructions.hpp
